# tactile-teleoperated-robot

Software/back-end/: .gitignore  6g-life.code-workspace  CMakeLists.txt  Dockerfile  README.md  bun.sh  docker-compose.yaml  make_build.sh  make_debug.sh  make_release.sh  plot_data.m  run.sh  softwareArchitecture.drawio
Software/back-end/.old/: Dockerfile.old
Software/back-end/catkin_ws/scripts/: build_ethercat_device_configurator.sh  run_ethercat_device_configurator.sh
Software/back-end/catkin_ws/src/ethercat_device_configurator/: CMakeLists.txt  package.xml
Software/back-end/catkin_ws/src/ethercat_device_configurator/cmake/modules/: FindNumPy.cmake
Software/back-end/catkin_ws/src/ethercat_device_configurator/example_config/: endoWrist.yaml
Software/back-end/catkin_ws/src/ethercat_device_configurator/example_config/device_configurations/: maxon.yaml
Software/back-end/catkin_ws/src/ethercat_device_configurator/include/ethercat_device_configurator/: multiProcessingUtils.hh
Software/back-end/catkin_ws/src/ethercat_device_configurator/src/: 6G-life-old-working.txt  6G-life.cpp  standalone.cpp
Software/back-end/catkin_ws/src/ethercat_sdk_master/include/ethercat_sdk_master/: EthercatMasterConfiguration.hpp
Software/back-end/catkin_ws/src/ethercat_sdk_master/src/ethercat_sdk_master/: EthercatMaster.cpp
Software/back-end/catkin_ws/src/maxon_epos_ethercat_sdk/include/maxon_epos_ethercat_sdk/: Command.hpp  Reading.hpp
Software/back-end/catkin_ws/src/maxon_epos_ethercat_sdk/src/maxon_epos_ethercat_sdk/: Command.cpp  Maxon.cpp  Reading.cpp
Software/back-end/config/: robot_map.xml
Software/back-end/examples/client/: CMakeLists.txt  client.cpp  client.hh  main.cpp
Software/back-end/examples/configuration/: CMakeLists.txt  main.cpp  make.sh  robot_map.xml
Software/back-end/examples/configuration/include/: config.cpp  config.hpp  pugixml.cpp  pugixml.hpp
Software/back-end/examples/cyclicSynchronousVelocity/: main.cpp
Software/back-end/examples/server/: CMakeLists.txt  main.cpp  server.cpp  server.hh
Software/back-end/examples/trajectory/include/: trajectory.hpp
Software/back-end/include/: Definitions.h  PandaKinematics_multi.cpp  PandaKinematics_multi.hh  PandaKinematics_multi_11DoFs.cpp  PandaKinematics_multi_11DoFs.hh  PandaKinematics_withoutRCMandendo.cpp  PandaKinematics_withoutRCMandendo.hh  Recorder.cpp  Recorder.hpp  configUtils.cpp  configUtils.hh  endoWrist.cpp  endoWrist.hh  eposMotorController.cpp  eposMotorController.hh  examples_common.cpp  examples_common.h  frankaEmika.cpp  frankaEmika.hh  multiProcessingUtils.cpp  pugixml.cpp  pugixml.hpp  robot.cpp  robot.hh  trajectory.cpp  trajectory.hpp  udpUtils.cpp  udpUtils.hh
Software/back-end/include/lib/: libethercat.so.1.1.0
Software/back-end/scripts/: build_docker_compose.sh  build_maxon.bash  install_libfranka.sh  install_ros_humble.sh  rebuild_docker_compose.sh
Software/back-end/slaves/: EPOS_ESI.xml
Software/back-end/src/: 6G-life.cpp
Software/back-end/trash/: 6G-life_cartesian_impedance.cpp  6G-life_joint_velocity.cpp  CMakeLists.txt  app.cpp  app.hh  eposMotorControlUtils.c  eposMotorControlUtils.h  eposUtils.cpp  eposUtils.hh  main.cpp  rcmKinematics.cpp  rcmKinematics.hh
Software/back-end/trash/HelloEposCmd/: HelloEposCmd.cpp
Software/front-end/: front-end.code-workspace
Software/front-end/6g-life_back-end/: App.cpp
Software/front-end/6g-life_front-end/: package-lock.json  package.json
Software/front-end/6g-life_front-end/src/: App.css  App.js  AppApi.js  Button.js  ButtonComponent.js  ChartComponent.js  ConnectRobotPanel.js  FrontEndApi.js  MainPage.js  SetPoint.js  SetPointsPanel.js
Software/lib/EPOS-Linux-Library/: Tutorial.odt
Software/lib/EPOS-Linux-Library/examples/HelloEposCmd/: HelloEposCmd  HelloEposCmd.cpp
Software/matlab-workspace/epos_matlab/Version2/: ClearErrorState.c  ClearErrorState.m  CloseCommunication.c  CloseCommunication.m  DisableNode.c  DisableNode.m  EnableNode.c  EnableNode.m  Epos2.m  FindHome.c  FindHome.m  GetCurrent.c  GetCurrent.m  GetErrorState.c  GetErrorState.m  GetObject.c  GetObject.m  GetOperationMode.c  GetOperationMode.m  GetPosition.c  GetPosition.m  GetVelocity.c  GetVelocity.m  HommingMethods.m  IsTargetReached.c  IsTargetReached.m  Make.m  MoveToPosition.c  MoveToPosition.m  MoveWithVelocity.c  MoveWithVelocity.m  OpenCommunication.c  OpenCommunication.m  OperationModes.m  QuickStop.c  QuickStop.m  SetCurrent.c  SetCurrent.m  SetObject.c  SetObject.m  (+14 more)
Software/matlab-workspace/panda_endowrist_models/: DGM_Endo.m  DGM_Panda.m  Plot_frame.m  TransformationMatrix.m  main.m
Software/robot-utils/epos_motor/src/: main.c
Software/robot-utils/gnuplot-5.4.6/: Makefile  config.h  config.status
Software/robot-utils/gnuplot-5.4.6/config/: Makefile
Software/robot-utils/gnuplot-5.4.6/demo/: Makefile
Software/robot-utils/gnuplot-5.4.6/demo/plugin/: Makefile
Software/robot-utils/gnuplot-5.4.6/docs/: Makefile  alldoc2gih  checkdoc  doc2gih  doc2hlp  doc2ipf  doc2ms  doc2rnh  doc2rtf  doc2tex  doc2wxhtml  gnuplot.gih
Software/robot-utils/gnuplot-5.4.6/docs/.deps/: checkdoc.Po  doc2gih.Po  doc2hlp.Po  doc2ipf.Po  doc2rnh.Po  doc2rtf.Po
Software/robot-utils/gnuplot-5.4.6/m4/: Makefile
Software/robot-utils/gnuplot-5.4.6/man/: Makefile
Software/robot-utils/gnuplot-5.4.6/share/: Makefile
Software/robot-utils/gnuplot-5.4.6/share/LaTeX/: Makefile
Software/robot-utils/gnuplot-5.4.6/src/: Makefile  bf_test  gnuplot_x11
Software/robot-utils/gnuplot-5.4.6/src/.deps/: command.Po  datafile.Po  gplt_x11.Po  mouse.Po  plot.Po  plot2d.Po  set.Po  show.Po  term.Po  unset.Po  variable.Po
Software/robot-utils/gnuplot-5.4.6/term/: Makefile
Software/robot-utils/plot/: CMakeLists.txt
Software/robot-utils/plot_with_gnuplot/src/: main  main.cpp
Software/robot-utils/serial/: main  main.cpp  main.cpp~
Software/robot-utils/trajectory/: CMakeLists.txt  getTrajectory.m  main  main.cpp  main.cpp~  trajectory.cpp~  trajectory.hpp~
Software/robot-utils/trajectory/include/: trajectory.cpp
(+2 files in other folders)
